# cpp-terminal-ui

./: ANSIEscapeSequences.cpp  ANSIEscapeSequences.h  Alignment.h  BaseContainer.cpp  BaseContainer.h  BaseWidget.cpp  BaseWidget.h  Border.cpp  Border.h  Button.cpp  Button.h  CMakeLists.txt  Color.cpp  Color.h  EventHandler.cpp  FloatingContainer.cpp  FloatingContainer.h  GTUI.cpp  GTUI.h  HContainer.cpp  HContainer.h  IRenderable.h  InputBox.cpp  InputBox.h  InputEvents.h  InputParser.cpp  InputParser.h  Label.cpp  Label.h  MouseTranslations.h  README.md  Spacer.cpp  Spacer.h  Text.cpp  Text.h  VContainer.cpp  VContainer.h  Widgets.h  Window.cpp  Window.h  (+2 more)
